<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Milionerki</string>
    <string name="app_choose_profil">Milionerki</string>
    <string name="app_create_profil">Milionerki</string>
    <string name="app_game">Milionerki</string>
    <string name="app_name_about">Milionerki - O grze</string>
    <string name="app_name_ranking">Ranking</string>
    <string name="action_settings">Wyjdź</string>
    
    <!-- START -->
    <string name="btn_game_start">Rozpocznij grę</string>
    <string name="btn_game_wyniki">Najlepsze wyniki</string>
    <string name="btn_game_info">O grze</string>

    <!-- RANKING -->
    <string name="ranking_title">Najlepsze wyniki</string>

    <!-- O MNIE -->
    <string name="title_system_rozgrywki">System rozgrywki</string>
    <string name="text_system_rozgrywki">
        Gra Milionerki opiera się na większości zasad popularnego teleturnieju "Milionerzy".\n
		Założenia gry są bardzo proste. Aby zdobyć tytułową nagrodę miliona należy odpowiedzieć na 15 zadanych pytań przez prowadzącego. 
		Istnieją dwa progi gwarantowane - pierwszy z nich po 5. pytaniu (1 000) oraz drugi z nich po 10. pytaniu (32 000). 
		Do wykorzystania są trzy koła ratunkowe: pytanie do publiczności, telefon do wirtualnego przyjaciela oraz pół na pół.
    </string>
    <string name="title_wersja">Wersja</string>
    <string name="text_wersja">Milionerki ver 0.01</string>
    <string name="title_autorzy">Autorzy</string>
    <string name="text_autorzy">Damian Graczyk, Kamil Gammert, Konrad Barbasiewicz, Andrzej Pietrzak, Leszek Sierocki</string>

    <!-- PROFIL -->
    <string name="choose_profil">Wybór profilu gracza</string>
    <string name="choose_avek">Wybierz avatar</string>
    <string name="create_profil">Uzupełnij dane</string>
    <string name="create_profil_name">Imię</string>
    <string name="create_profil_srunname">Nazwisko</string>
    <string name="create_profil_nick">Pseudonim</string>

    <string name="back">Powrót do menu</string>
    <string name="next">Dalej</string>
    <string name="createBtn">Stwórz</string>
    <string name="newProfil">Nowy profil</string>

    <string name="error_create">Konto o takim nicku już istnieje. Wybierz inny!</string>
    <string name="success_create_profil">Założono konto!</string>

    <string-array name="array_avek">
        <item>@drawable/awatar_k1</item>
        <item>@drawable/awatar_k2</item>
        <item>@drawable/awatar_k3</item>
        <item>@drawable/awatar_m1</item>
        <item>@drawable/awatar_m2</item>
        <item>@drawable/awatar_m3</item>
    </string-array>

    <string name="error_no_nick">Nie wpisałeś pseudonimu. Uzupełnij dane.</string>
    <string name="error_long">może mieć maksymalnie 25 znaków.</string>

    <!-- MENU -->
    <string name="drawer_open">Aktywne menu</string>
    <string name="drawer_close">Zamknięte menu</string>
    <string-array name="navigation_items_array">
        <item>Zrezygnuj</item>
        <item>Nowa gra</item>
        <item>Najlepsze wyniki</item>
        <item>O grze</item>
    </string-array>
    <string name="alert_yes_or_no">Czy na pewno chcesz wykonać ta akcję?</string>
    <string name="alert_yes_or_no_end">Czy na pewno chcesz odejść z gry z aktualną wygraną?</string>
    <string name="alert_yes_or_no_new">Czy na pewno chcesz rozpocząć od nowa?</string>
    <string name="alert_yes_or_no_ranking">Czy na pewno chcesz anulować rozgrywkę by zobaczyć ranking?</string>
    <string name="alert_yes_or_no_about">Czy na pewno chcesz anulować rozgrywkę by przeczytać inforacje o grze?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>

    <!-- GRA -->
    <string name="cash">Próg:</string>
    <string name="question_count">Pytanie:</string>
    <string-array name="cash_array">
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>2500</item>
        <item>7500</item>
        <item>20000</item>
        <item>35000</item>
        <item>50000</item>
        <item>100000</item>
    </string-array>

    <string-array name="name_friend">
        <item>Kamil</item>
        <item>Piotr</item>
        <item>Leszek</item>
        <item>Andrzej</item>
        <item>Konrad</item>
        <item>Damian</item>
    </string-array>

    <string name="dialog_alert_friend">TELEFON DO PRZYJACIELA</string>
    <string name="dialog_alert_audience">PYTANIE DO PUBLICZNOŚCI</string>
    <string name="error_used_yet">Już skorzystałeś z tego koła.</string>

    <string name="hello">Cześć</string>
    <string name="text_hello">mam pytanie.</string>

</resources>
