<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/box1"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:gravity="top|center"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/alert_yes_or_no" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center" >

            <Button
                android:id="@+id/yesButton"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <Button
                android:id="@+id/noButton"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/yesButton"
                android:text="@string/no" />

        </RelativeLayout>
</LinearLayout>